--- a/marketplace/packages/server/.env
+++ b/marketplace/packages/server/.env
@@ -1,13 +1,13 @@
-PORT=5000
+PORT=5001
 NODE_ENV=development
-MONGODB_URI=mongodb://localhost:27017/marketplace
+MONGODB_URI=mongodb+srv://kvbkcb:GcvBPUpfYYE2IPcv@cluster0.fdfm5mu.mongodb.net/marketplace?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=marketplace-super-secret-jwt-key-2024
 JWT_EXPIRE=7d
 REFRESH_TOKEN_SECRET=marketplace-refresh-token-secret-2024
 REFRESH_TOKEN_EXPIRE=30d
 
 # Frontend URLs
-WEB_URL=http://localhost:3000
+WEB_URL=http://localhost:3004
 MOBILE_URL=http://localhost:3001
 
 # Cloudinary (Image Storage)
